# kozukic-

./: Aplication.cc  CMakeLists.txt  Qtermo.cc  Qtermo.h  Qtermoex.cc  README.md  hello.cc  jordanwigner.cc  jordanwigner.h  jw  jw.cc  matriz.cc  spin.cc  spin.h
